# llm-rpg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_player_billing.py
src/llm_rpg/: __init__.py  config.py  db.py  logging.py  redis.py
src/llm_rpg/api/: __init__.py  main.py
src/llm_rpg/game/: __init__.py  billing.py  context.py  maintenance.py  memory.py  moderation.py  reducers.py  turn.py  worldbuilder.py
src/llm_rpg/llm/: __init__.py  base.py  fake.py  prompts.py  provider.py
src/llm_rpg/models/: __init__.py  tables.py
src/llm_rpg/schemas/: __init__.py  enums.py  moderation.py  player.py  turn.py  world.py
src/llm_rpg/scripts/: __init__.py  delete_telegram_webhook.py  run_worldbuild.py  set_bot_commands.py  set_telegram_webhook.py
src/llm_rpg/telegram/: __init__.py  router.py  sender.py
src/llm_rpg/worker/: __init__.py  lifecycle.py  main.py  polling.py  processor.py  reconciler.py
tests/: test_smoke.py
tests/e2e/: conftest.py  test_ingress_worker.py
tests/persistence/: test_models.py
tests/unit/: test_billing.py  test_commands.py  test_logging.py  test_moderation.py  test_polling.py  test_provider.py  test_recovery.py  test_reducers.py  test_schemas.py  test_sender.py  test_turn_pipeline.py  test_worldbuilder.py
